# ml-kickstarter-project

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: kurkkumopo_app.py
app/pages/: 1_Analyysi.py
data/fx_rates/: AUD-USD_daily.csv  CAD-USD_daily.csv  CHF-USD_daily.csv  DKK-USD_daily.csv  EUR-USD_daily.csv  GBP-USD_daily.csv  HKD-USD_daily.csv  JPY-USD_daily.csv  MXN-USD_daily.csv  NOK-USD_daily.csv  NZD-USD_daily.csv  PLN-USD_daily.csv  SEK-USD_daily.csv  SGD-USD_daily.csv
playground/: analyze_blurb.ipynb  baseline_blurb.ipynb  blurb_tfidf_testing.ipynb  calculate_usd_goal.ipynb  decision_tree.ipynb  eda.ipynb  kurkkumopo.ipynb  kurkkupomo_v2.ipynb  logreg_sgd_hyperparams.ipynb  mallin_tietoja.ipynb  nikon_tets.ipynb  painot.csv  preprocessing-test.ipynb  rsrch.ipynb  sample.csv
src/models/: evaluate_models.py  logreg_optimized.py
src/models/objects/: baseline_decision_tree.pkl  logreg_final.joblib
src/preprocessing/: add_blurb_features.py  add_name_features.py  binarize_state.py  blurb_tfidf.py  calculate_usd_goal.py  date_fix.py  drop_cols.py  drop_zero_goal_rows.py  feature_engineering.py  merge_categories.py  merge_comics.py  preprocess_data.py
src/utils/: add_fx_mean.py  calculate_fx_means.py  data_preparation.py  fetch_fxrates.py
